RESOLVED FIXED96196
REGRESSION (r127882): accessibility/spinbutton-value.html failing on GTK
https://bugs.webkit.org/show_bug.cgi?id=96196
Summary REGRESSION (r127882): accessibility/spinbutton-value.html failing on GTK
Zan Dobersek
Reported 2012-09-09 00:10:24 PDT
accessibility/spinbutton-value.html started failing on GTK after it was introduced in r127882 http://trac.webkit.org/changeset/127882. --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/accessibility/spinbutton-value-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/accessibility/spinbutton-value-actual.txt @@ -5,10 +5,10 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS endsWith(axSpin.intValue, '5') is true -PASS endsWith(axSpin.minValue, '1') is true -PASS endsWith(axSpin.maxValue, '9') is true -PASS endsWith(axSpin.valueDescription, '5 of 9') is true +FAIL endsWith(axSpin.intValue, '5') should be true. Was false. +FAIL endsWith(axSpin.minValue, '1') should be true. Was false. +FAIL endsWith(axSpin.maxValue, '9') should be true. Was false. +FAIL endsWith(axSpin.valueDescription, '5 of 9') should be true. Was false. PASS axSpin.title is axUntitled.title PASS successfullyParsed is true
Attachments
Patch (6.00 KB, patch)
2012-09-21 12:00 PDT, Joanmarie Diggs
no flags
Patch (6.04 KB, patch)
2012-09-21 12:10 PDT, Joanmarie Diggs
no flags
Joanmarie Diggs
Comment 1 2012-09-19 22:54:15 PDT
This test is passing for me. Is it still failing for you?
Joanmarie Diggs
Comment 3 2012-09-21 12:00:24 PDT
Joanmarie Diggs
Comment 4 2012-09-21 12:10:10 PDT
Joanmarie Diggs
Comment 5 2012-09-21 12:12:17 PDT
Comment on attachment 165170 [details] Patch Same changes; applyable (fingers crossed) patch. The previous one could not be applied due to a change in TestExpectations. Guess we are all working at once. :)
WebKit Review Bot
Comment 6 2012-09-21 13:03:37 PDT
Comment on attachment 165170 [details] Patch Clearing flags on attachment: 165170 Committed r129247: <http://trac.webkit.org/changeset/129247>
WebKit Review Bot
Comment 7 2012-09-21 13:03:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.