third_party/WebKit/Tools/DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp
@@ -410,7 +410,8 @@ double AccessibilityUIElement::maxValue()
 
 JSStringRef AccessibilityUIElement::valueDescription()
 {
-    // FIXME: implement
+    // FIXME: implement after it has been implemented in ATK.
+    // See: https://bugzilla.gnome.org/show_bug.cgi?id=684576
     return JSStringCreateWithCharacters(0, 0);
 }
 
